--- a/apps/fundedyouth-org/package.json
+++ b/apps/fundedyouth-org/package.json
@@ -13,7 +13,8 @@
     "@repo/ui": "workspace:*",
     "lucide-react": "^0.552.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
